--- a/frontend_react/index.html
+++ b/frontend_react/index.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!--
+      - primary meta tags
+    -->
+    <title>Sikharthy Infotech - Crafting Excellence in Web Development</title>
+    <meta
+      name="title"
+      content="Top Web Development & Software Company in Kolkata - Sikharthy Infotech"
+    />
+    <meta
+      name="description"
+      content="Sikharthy Infotech Pvt Ltd is a Kolkata-based company offering web development, software development, website design, content development, and digital marketing services."
+    />
   </head>
   <body>
     <div id="root"></div>
